Disappearing text objects. #39166

Closed
opened 2014-03-13 18:00:33 +01:00 by Dave Holloway · 17 comments

Win XP 32 bit SP3. NVidia 550TI

Build a2ffd8e

After rendering Layer 1, text on Layer 2, or other Layers becomes invisible, until tabbing into edit mode.

blend included, but very easy to reproduce.

Disappearing_text.blend

Win XP 32 bit SP3. NVidia 550TI Build a2ffd8e After rendering Layer 1, text on Layer 2, or other Layers becomes invisible, until tabbing into edit mode. blend included, but very easy to reproduce. [Disappearing_text.blend](https://archive.blender.org/developer/F80977/Disappearing_text.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @daveh

Added subscriber: @daveh

Added subscriber: @willi-2

Added subscriber: @willi-2

I can not reproduce this. My steps were:

  • Open file
  • Press F12 to render
  • Press Esc to go back
  • Press 2 to go to layer 2: The text is visible without going into edit mode

Tried: Win 7/64, 2.70 build 2d4de27 and WinXP/32, 2.70 build 2d09977

I can not reproduce this. My steps were: - Open file - Press F12 to render - Press Esc to go back - Press 2 to go to layer 2: The text is visible without going into edit mode Tried: Win 7/64, 2.70 build 2d4de27 and WinXP/32, 2.70 build 2d09977

Added subscriber: @mont29

Added subscriber: @mont29

Can’t reproduce either… Smells like graphic driver issue, did you try updating yours?

Can’t reproduce either… Smells like graphic driver issue, did you try updating yours?

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong

missingTexts.png
Texts objects missing after rendered

I can recreate the invisible texts on Win7-x64 with GTX560ti (latest driver)

Step 1: make 2 layers, layer1: any object (to be rendered); Layer2: text objects, long and short ones (not rendered)
Step 2: render only layer 1
Step 3: go to layer 2, texts objects should be missing, only origins remain.

Text will still pop back up if you toggle in and out of edit mode. But if you have many text objects, it will be tedious. I have tested on file from 2.69 to 2.70TB1/RC1/RC2, and files created on 2.70TB1/RC1/RC2, problem persist.

![missingTexts.png](https://archive.blender.org/developer/F81004/missingTexts.png) Texts objects missing after rendered I can recreate the invisible texts on Win7-x64 with GTX560ti (latest driver) Step 1: make 2 layers, layer1: any object (to be rendered); Layer2: text objects, long and short ones (not rendered) Step 2: render only layer 1 Step 3: go to layer 2, texts objects should be missing, only origins remain. Text will still pop back up if you toggle in and out of edit mode. But if you have many text objects, it will be tedious. I have tested on file from 2.69 to 2.70TB1/RC1/RC2, and files created on 2.70TB1/RC1/RC2, problem persist.

Added subscriber: @RJW

Added subscriber: @RJW

OSX 10.9.2, iMac w/ ATI Radeon HD 4850

Following @WeeKwongBong's steps and starting with a new file I can confirm on both 2.70RC1 and RC2.

OSX 10.9.2, iMac w/ ATI Radeon HD 4850 Following @WeeKwongBong's steps and starting with a new file I can confirm on both 2.70RC1 and RC2.

Yes, now I was also able to reproduce it. Don't know what was the difference to the first time when it worked. Demo video (36 s):
Desktop_2014_03_14_03_27_46_523.mp4

Yes, now I was also able to reproduce it. Don't know what was the difference to the first time when it worked. Demo video (36 s): [Desktop_2014_03_14_03_27_46_523.mp4](https://archive.blender.org/developer/F81044/Desktop_2014_03_14_03_27_46_523.mp4)

Added subscriber: @Sergey

Added subscriber: @Sergey

Ok, can reproduce it with several text objects indeed (text_hidden_after_render.blend). This smells like curve cache update issue, maybe? Sergey, ideas? ;)

Ok, can reproduce it with several text objects indeed ([text_hidden_after_render.blend](https://archive.blender.org/developer/F81096/text_hidden_after_render.blend)). This smells like curve cache update issue, maybe? Sergey, ideas? ;)

This issue was referenced by blender/blender-addons-contrib@d908c90d6d

This issue was referenced by blender/blender-addons-contrib@d908c90d6dd52b8a837a8eddb96d1b128633deed

This issue was referenced by d908c90d6d

This issue was referenced by d908c90d6dd52b8a837a8eddb96d1b128633deed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d908c90d6d.

Closed by commit d908c90d6d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39166
No description provided.